[src/fpif.c] Added an assertion (I get a build failure with gcc-snapshot 20150722-1 due to -Werror=array-bounds, but the code looks OK). Simplified test on: https://gcc.gnu.org/bugzilla/show_bug.cgi?id=67077

[From SVN r9638 (trunk)]